google-perftools (2.7-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Fix libprofiler build on ppc64el (closes: #894749).
  * Remove 0001-unbreak-printing-large-span-stats.patch as not needed.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 30 Apr 2018 06:52:01 +0000

google-perftools (2.6.90-0.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Upload to unstable.
  * Cherry-pick patches from upstream to fix tests on i386.

 -- YunQiang Su <syq@debian.org>  Sun, 25 Mar 2018 19:20:03 +0800

google-perftools (2.6.90-0.1~exp) experimental; urgency=medium

  * Non-maintainer upload.
  * Migrate to salsa.debian.org, and convert to git.
  * New upstream release, and use arch list to 'any' for test on experimental
    (Closes: #872511, #837343, #856203, #857275, #761685)
  * Migrate to 3.0 (quilt) format. (Closes: #872512)
  * Build-Dep on libunwind-dev instead of libunwind8-dev. (Closes: #872593)
  * Drop build-dep on binutils. (Closes: #873141)
  * Use standard version 4.1.3.
  * Use multiarch dir as libdir.
  * cdbs: dh-autoreconf.

 -- YunQiang Su <syq@debian.org>  Wed, 21 Mar 2018 13:06:54 +0800

google-perftools (2.5-2.2) unstable; urgency=medium

  * Non-maintainer upload
  * Tweak profiler_unittest.sh so test failures are just counted once
    (Closes: #849132)

 -- Hilko Bengen <bengen@debian.org>  Tue, 28 Feb 2017 22:44:18 +0100

google-perftools (2.5-2.1) unstable; urgency=medium

  * Non-maintainer upload
  * Update URL (Homepage, debian/copyright)
  * Ignore result for profiler unit test that fails "randomly" on i386
    (Closes: #849132)

 -- Hilko Bengen <bengen@debian.org>  Sun, 26 Feb 2017 12:12:05 +0100

google-perftools (2.5-2) unstable; urgency=medium

  * Provide automatic debug packages rather than -dbg packages.
    (Closes: #838562)
  * Bump up Standards-Version to 3.9.8

 -- Daigo Moriwaki <daigo@debian.org>  Sun, 27 Nov 2016 16:08:46 +0900

google-perftools (2.5-1) unstable; urgency=medium
