@@ -2,7 +2,7 @@ Source: google-perftools
 Section: libs
 Priority: optional
 Maintainer: Daigo Moriwaki <daigo@debian.org>
-Build-Depends: cdbs, dh-autoreconf, debhelper (>= 10.2.1), libunwind-dev [amd64]
+Build-Depends: dh-autoreconf, debhelper (>= 10.2.1), libunwind-dev [amd64]
 Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.9.8
 Homepage: https://github.com/gperftools/gperftools
