@@ -1,0 +1,7 @@
+usr/include/google
+usr/include/gperftools
+usr/lib/*/*.a
+usr/lib/*/*.so
+usr/lib/*/pkgconfig/*.pc
+usr/share/doc/gperftools
+
