@@ -1,0 +1,1 @@
+usr/lib/*/libtcmalloc_minimal*.so.*
